--- a/dev-workflow-ui/webContent/resources/css/workflow-ui.css
+++ b/dev-workflow-ui/webContent/resources/css/workflow-ui.css
@@ -85,6 +85,10 @@ body .ui-datatable .ui-datatable-data > tr.ui-state-highlight {
 }
 
 /* Starts */
+.start-title {
+  display: flex;
+  align-items: center;
+}
 .start-element .start-link {
   width: 100%;
   padding: 0.5rem;
