Change detail info button icon and color

--- a/dev-workflow-ui/webContent/includes/components/casesTable.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/casesTable.xhtml
@@ -46,7 +46,7 @@
     </p:column>
 
     <p:column styleClass="table-btn-1">
-      <p:linkButton icon="si si-information-circle" styleClass="ui-button-outlined rounded-button"
+      <p:linkButton icon="si si-navigation-menu-horizontal" styleClass="ui-button-outlined ui-button-secondary rounded-button"
         href="caseDetails.xhtml?case=#{case.id}" />
     </p:column>
   </p:dataTable>
