--- a/dev-workflow-ui/webContent/view/home.xhtml
+++ b/dev-workflow-ui/webContent/view/home.xhtml
@@ -100,7 +100,7 @@
                   <jc:datetime id="expiryTime" datetime="#{task.expiryTimestamp}" />
                 </p:column>
                 <p:column styleClass="table-btn-1">
-                  <p:linkButton icon="si si-information-circle" styleClass="ui-button-outlined rounded-button"
+                  <p:linkButton icon="si si-navigation-menu-horizontal" styleClass="ui-button-outlined ui-button-secondary rounded-button"
                     href="taskDetails.xhtml?task=#{task.id}" />
                 </p:column>
               </p:dataTable>
