--- a/dev-workflow-ui/webContent/includes/components/caseDetails/taskList.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/caseDetails/taskList.xhtml
@@ -36,7 +36,7 @@
     </p:column>
 
     <p:column styleClass="table-btn-1">
-      <p:linkButton icon="si si-information-circle" styleClass="ui-button-outlined rounded-button"
+      <p:linkButton icon="si si-navigation-menu-horizontal" styleClass="ui-button-outlined ui-button-secondary rounded-button"
         href="taskDetails.xhtml?task=#{task.id}" />
     </p:column>
   </p:dataTable>
