Adjust style of start accordion and elements

--- a/dev-workflow-ui/webContent/includes/components/startsPanel.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/startsPanel.xhtml
@@ -15,7 +15,7 @@
   </f:facet>
 
   <h:panelGroup id="accordionContainer">
-    <p:accordionPanel var="pmv" value="#{processesIvyDevWfBean.PMVs}" id="projectStarts"
+    <p:accordionPanel var="pmv" value="#{processesIvyDevWfBean.PMVs}" id="projectStarts" styleClass="custom-accordion"
      activeIndex="#{processesIvyDevWfBean.startsDataModel.activeIndex}" multiple="true">
       <p:tab id="project" titleStyleClass="start-title">
         <f:facet name="title">
