XIVY-8691 Show process preview on case details page

--- a/dev-workflow-ui/webContent/resources/components/processViewer.xhtml
+++ b/dev-workflow-ui/webContent/resources/components/processViewer.xhtml
@@ -11,7 +11,7 @@
   <p:dialog id="processViewerDialog" widgetVar="process-viewer-dlg" width="80%" showEffect="fade" modal="true">
     <f:facet name="header">
       <h:outputText value="#{cc.attrs.title}" />
-      <p:link id="openViewerNewPage" styleClass="staight-text-icon" href="#{cc.attrs.link}">
+      <p:link id="openViewerNewPage" styleClass="staight-text-icon" href="#{cc.attrs.link}" target="_blank">
         <i class="si si-expand-6 p-ml-2" />
       </p:link>
     </f:facet>
