--- a/dev-workflow-ui/webContent/resources/css/workflow-ui.css
+++ b/dev-workflow-ui/webContent/resources/css/workflow-ui.css
@@ -146,7 +146,7 @@ body .custom-accordion.ui-accordion .ui-accordion-header:first-child {
 }
 .case-map-container {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
   width: 100%;
   height: 100%;
@@ -159,10 +159,12 @@ body .custom-accordion.ui-accordion .ui-accordion-header:first-child {
 }
 .case-map-container .process-flow .flow-txt {
   position: relative;
-  margin-top: 10px;
   float: left;
   width: 100%;
   text-align: center;
+}
+.case-map-container .process-flow .flow-txt hr{
+  border-top: 1px solid var(--surface-d);
 }
 .case-map-icon {
   font-size: 1.5em;
