Improve performance of viewer and process start
- Fix hold lists in object and don't calculate them on each request
- Don't set startable model to viewer bean, set only link and resolve
the title of it

- Catch ClassCaseException in last starts

- Fix flaky homepage test

- Try stabilize web tests

--- a/dev-workflow-ui/webContent/view/home.xhtml
+++ b/dev-workflow-ui/webContent/view/home.xhtml
@@ -52,7 +52,7 @@
                       <p:tooltip for="openStartFullscreenBtn" value="Open start on a fullscreen page" position="top" rendered="#{start.embedInFrame}" />
 
                       <p:commandLink id="openProcessViewer" oncomplete="PF('process-viewer-dlg').show()" styleClass="p-ml-1"
-                        update="processViewer:processViewerDialog" actionListener="#{viewerIvyDevWfBean.setStartable(start)}">
+                        update="processViewer:processViewerDialog" actionListener="#{homepageIvyDevWfBean.setViewerStart(start.viewerLink)}">
                         <i class="si si-hierarchy-6 si-rotate-270" />
                       </p:commandLink>
                       <p:tooltip for="openProcessViewer" position="top"
@@ -126,7 +126,7 @@
         </h:panelGroup>
       </div>
 
-      <jc:processViewer id="processViewer" title="#{viewerIvyDevWfBean.viewerDialogTitle}" link="#{viewerIvyDevWfBean.viewerLink}" />
+      <jc:processViewer id="processViewer" title="#{homepageIvyDevWfBean.viewerTitle}" link="#{homepageIvyDevWfBean.viewerLink}" />
     </ui:define>
   </ui:composition>
 </h:body>
