--- a/dev-workflow-ui/webContent/view/starts.xhtml
+++ b/dev-workflow-ui/webContent/view/starts.xhtml
@@ -16,7 +16,7 @@
           <ui:include src="/includes/components/startsPanel.xhtml" />
         </div>
 
-        <jc:processViewer id="processViewer" title="#{viewerIvyDevWfBean.viewerDialogTitle}" link="#{viewerIvyDevWfBean.viewerLink}" />
+        <jc:processViewer id="processViewer" title="#{processesIvyDevWfBean.viewerTitle}" link="#{processesIvyDevWfBean.viewerLink}" />
       </h:form>
     </ui:define>
   </ui:composition>
