--- a/dev-workflow-ui/webContent/resources/components/startsPanelElement.xhtml
+++ b/dev-workflow-ui/webContent/resources/components/startsPanelElement.xhtml
@@ -30,7 +30,7 @@
 
     <p:commandLink id="openProcessViewer" oncomplete="PF('process-viewer-dlg').show()" styleClass="p-ml-2 p-mr-2"
       rendered="#{loginIvyDevWfBean.loggedIn}" update="startsForm:processViewer:processViewerDialog"
-      actionListener="#{viewerIvyDevWfBean.setStartable(cc.attrs.start)}">
+      actionListener="#{processesIvyDevWfBean.setViewerStart(cc.attrs.start.viewerLink)}">
       <i class="si si-hierarchy-6 si-rotate-270" />
     </p:commandLink>
     <p:tooltip for="openProcessViewer" position="left"
