Improve casemap and process preview viewer card

--- a/dev-workflow-ui/webContent/view/caseDetails.xhtml
+++ b/dev-workflow-ui/webContent/view/caseDetails.xhtml
@@ -63,7 +63,7 @@
                   <p:tooltip for="openProcessViewerBtn" position="top" value="Open Process Viewer" />
                 </div>
                 <div class="height-100 p-d-flex p-jc-center p-ai-center">
-                  <iframe id="processViewerFrame" src="#{casesDetailsIvyDevWfBean.processPreviewLink}"/>
+                  <iframe id="processViewerFrame" class="process-viewer-preview" src="#{casesDetailsIvyDevWfBean.processPreviewLink}"/>
                 </div>
               </div>
             </h:panelGroup>
