--- a/dev-workflow-ui/webContent/resources/css/workflow-ui.css
+++ b/dev-workflow-ui/webContent/resources/css/workflow-ui.css
@@ -121,6 +121,13 @@ body .custom-accordion.ui-accordion .ui-accordion-header:first-child {
   margin-top: 10px;
 }
 
+/* Process Viewer */
+.process-viewer-preview {
+  height: 100%;
+  width: 100%;
+  border: none;
+}
+
 /* Case Map */
 .case-map-element {
   height: 100%;
@@ -131,18 +138,18 @@ body .custom-accordion.ui-accordion .ui-accordion-header:first-child {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #eeeeee;
+  background-color: var(--surface-d);
   border-radius: 3px;
   margin-bottom: 10px;
 }
 .case-map-icon-container .current {
-  color: #afca05;
+  color: var(--primary-color);
 }
 .case-map-icon-container .visited {
-  color: #555555;
+  color: var(--text-color);
 }
 .case-map-icon-container .waiting {
-  color: #cccccc;
+  color: var(--text-color-secondary);
 }
 .case-map-container {
   display: flex;
@@ -183,30 +190,20 @@ body .custom-accordion.ui-accordion .ui-accordion-header:first-child {
 }
 .dot {
   position: absolute;
-  background-color: #fff;
-  border: 1px solid #212121;
+  background-color: var(--surface-b);
+  border: 1px solid var(--text-color);
   height: 20px;
   width: 20px;
   border-radius: 50%;
 }
 .case-state-finished {
-  color: #60B500;
+  color: var(--success-color);
 }
 .case-state-running {
-  color: #006F94;
+  color: var(--primary-color);
 }
 .case-map-column {
   display: flex;
   align-items: center;
   flex-direction: column;
-}
-.case-column-details {
-  border: 1px solid silver;
-  box-shadow: 3px 3px 4px silver;
-  padding: 0px;
-}
-.case-column-details-top {
-  background: silver;
-  padding: 10px;
-  color: white;
 }
