XIVY-8759 Fix broken link in Axon Ivy Designer

--- a/dev-workflow-ui/webContent/includes/template/template.xhtml
+++ b/dev-workflow-ui/webContent/includes/template/template.xhtml
@@ -23,7 +23,7 @@
           <a href="#" class="menu-button">
            <i class="pi pi-bars"/>
           </a>
-          <a id="bannerLogo" class="layout-topbar-logo" href="/system">
+          <a id="bannerLogo" class="layout-topbar-logo" href="home.xhtml">
             <p:graphicImage name="#{ivyFreyaTheme.logo}" library="ivy-branding" alt="Logo" />
           </a>
         </div>
