--- a/dev-workflow-ui/webContent/view/profile.xhtml
+++ b/dev-workflow-ui/webContent/view/profile.xhtml
@@ -7,14 +7,14 @@
     <ui:define name="content">
       <f:event type="preRenderView" listener="#{loginIvyDevWfBean.redirectIfNotAdmin}" />
 
-      <div class="card">
+      <div class="card ui-fluid">
         <div class="p-d-flex p-ai-center p-mb-3">
           <i class="p-pr-3 si si-single-neutral-circle card-title-icon"></i>
           <h2 class="p-m-0">Profile</h2>
         </div>
         <h:form id="profileForm">
           <p:growl id="growl" showDetail="true" />
-          <p:panelGrid columns="2" layout="flex">
+          <p:panelGrid columns="4" layout="flex" columnClasses="p-col-6 p-md-2, p-col-6 p-md-4, p-col-6 p-md-2, p-col-6 p-md-4">
             <h:outputLabel>User Name</h:outputLabel>
             <h:outputText value="#{profileBean.userName}"></h:outputText>
 
@@ -44,8 +44,8 @@
 	            <br />
               <h:outputText title="Formatting locale of the current session." style="font-size:10px;" value="#{profileBean.formattingLanguageSource}"></h:outputText>
             </h:panelGroup>
-           <p:commandButton id="saveBtn" value="Save" icon="si si-recycling-trash-bin-2 " actionListener="#{profileBean.save}" update="@form"/>
           </p:panelGrid>
+           <p:commandButton id="saveBtn" value="Save" icon="si si-recycling-trash-bin-2" style="max-width:200px;margin-top:20px;" actionListener="#{profileBean.save}" update="@form"/>
         </h:form>
       </div>
     </ui:define>
