--- a/dev-workflow-ui/webContent/view/profile.xhtml
+++ b/dev-workflow-ui/webContent/view/profile.xhtml
@@ -1,63 +1,74 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:f="http://xmlns.jcp.org/jsf/core"
-	xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-	xmlns:ic="http://ivyteam.ch/jsf/component"
-	xmlns:p="http://primefaces.org/ui"
-	xmlns:pe="http://primefaces.org/ui/extensions">
+  xmlns:f="http://xmlns.jcp.org/jsf/core"
+  xmlns:h="http://xmlns.jcp.org/jsf/html"
+  xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+  xmlns:ic="http://ivyteam.ch/jsf/component"
+  xmlns:p="http://primefaces.org/ui"
+  xmlns:pe="http://primefaces.org/ui/extensions">
 
 <h:body>
-	<ui:composition template="../includes/template/template.xhtml">
-		<ui:define name="content">
-			<f:event type="preRenderView"
-				listener="#{loginIvyDevWfBean.redirectIfNotAdmin}" />
+  <ui:composition template="../includes/template/template.xhtml">
+    <ui:define name="content">
+      <f:event type="preRenderView"
+        listener="#{loginIvyDevWfBean.redirectIfNotAdmin}" />
 
-			<div class="card ui-fluid">
-				<div class="p-d-flex p-ai-center p-mb-3">
-					<i class="p-pr-3 si si-single-neutral-circle card-title-icon"></i>
-					<h2 class="p-m-0">Profile</h2>
-				</div>
-				<h:form id="profileForm">
-					<p:growl id="growl" showDetail="true" />
-					<p:panelGrid columns="4" layout="flex"
-						columnClasses="p-col-6 p-md-2, p-col-6 p-md-4, p-col-6 p-md-2, p-col-6 p-md-4">
-						<h:outputLabel>User Name</h:outputLabel>
-						<h:outputText value="#{profileBean.userName}"></h:outputText>
+      <div class="card ui-fluid">
+        <div class="p-d-flex p-ai-center p-mb-3">
+          <i class="p-pr-3 si si-single-neutral-circle card-title-icon"></i>
+          <h2 class="p-m-0">Profile</h2>
+        </div>
+        <h:form id="profileForm">
+          <p:growl id="growl" showDetail="true" />
+          <p:panelGrid columns="4" layout="flex"
+            columnClasses="p-col-6 p-md-2, p-col-6 p-md-4, p-col-6 p-md-2, p-col-6 p-md-4">
+            <h:outputLabel>User Name</h:outputLabel>
+            <h:outputText value="#{profileBean.userName}"></h:outputText>
 
-						<h:outputLabel>Full name</h:outputLabel>
-						<h:outputText value="#{profileBean.fullName}"></h:outputText>
+            <h:outputLabel>Full name</h:outputLabel>
+            <h:outputText value="#{profileBean.fullName}"></h:outputText>
 
-						<h:outputLabel>Email</h:outputLabel>
-						<h:outputText value="#{profileBean.email}"></h:outputText>
+            <h:outputLabel>Email</h:outputLabel>
+            <h:outputText value="#{profileBean.email}"></h:outputText>
 
-						<h:outputLabel>Roles</h:outputLabel>
-						<h:outputText value="#{profileBean.roles}"></h:outputText>
+            <h:outputLabel>Roles</h:outputLabel>
+            <h:outputText value="#{profileBean.roles}"></h:outputText>
 
-						<h:outputLabel>Language</h:outputLabel>
-						<h:panelGroup>
-							<p:selectOneMenu id="contentLanguage" value="#{profileBean.contentLanguage}" converter="localeConverter">
-								<f:selectItems value="#{profileBean.contentLanguages}" var="locale" itemLabel="#{profileBean.toDisplayName(locale)}" />
-							</p:selectOneMenu>
-							<br />
-							<h:outputText title="Content locale of the current session." style="font-size:10px;" value="#{profileBean.contentLanguageSource}"></h:outputText>
-						</h:panelGroup>
+            <h:outputLabel>Language</h:outputLabel>
+            <h:panelGroup>
+              <p:selectOneMenu id="contentLanguage"
+                value="#{profileBean.contentLanguage}"
+                converter="localeConverter">
+                <f:selectItems value="#{profileBean.contentLanguages}"
+                  var="locale" itemLabel="#{profileBean.toDisplayName(locale)}" />
+              </p:selectOneMenu>
+              <br />
+              <h:outputText title="Content locale of the current session."
+                style="font-size:10px;"
+                value="#{profileBean.contentLanguageSource}"></h:outputText>
+            </h:panelGroup>
 
-						<h:outputLabel>Formatting Language</h:outputLabel>
-						<h:panelGroup>
-							<p:selectOneMenu filter="true" filterMatchMode="contains" id="formattingLanguage"	value="#{profileBean.formattingLanguage}"	converter="localeConverter">
-								<f:selectItems value="#{profileBean.formattingLanguages}" var="locale" itemLabel="#{profileBean.toDisplayName(locale)}" />
-							</p:selectOneMenu>
-							<br />
-							<h:outputText title="Formatting locale of the current session."	style="font-size:10px;" value="#{profileBean.formattingLanguageSource}"></h:outputText>
-						</h:panelGroup>
-					</p:panelGrid>
-					<p:commandButton id="saveBtn" value="Save"
-						icon="si si-recycling-trash-bin-2"
-						style="max-width:200px;margin-top:20px;"
-						actionListener="#{profileBean.save}" update="@form" />
-				</h:form>
-			</div>
-		</ui:define>
-	</ui:composition>
+            <h:outputLabel>Formatting Language</h:outputLabel>
+            <h:panelGroup>
+              <p:selectOneMenu filter="true" filterMatchMode="contains"
+                id="formattingLanguage"
+                value="#{profileBean.formattingLanguage}"
+                converter="localeConverter">
+                <f:selectItems value="#{profileBean.formattingLanguages}"
+                  var="locale" itemLabel="#{profileBean.toDisplayName(locale)}" />
+              </p:selectOneMenu>
+              <br />
+              <h:outputText title="Formatting locale of the current session."
+                style="font-size:10px;"
+                value="#{profileBean.formattingLanguageSource}"></h:outputText>
+            </h:panelGroup>
+          </p:panelGrid>
+          <p:commandButton id="saveBtn" value="Save"
+            icon="si si-recycling-trash-bin-2"
+            style="max-width:200px;margin-top:20px;"
+            actionListener="#{profileBean.save}" update="@form" />
+        </h:form>
+      </div>
+    </ui:define>
+  </ui:composition>
 </h:body>
 </html>
