--- a/dev-workflow-ui/webContent/view/profile.xhtml
+++ b/dev-workflow-ui/webContent/view/profile.xhtml
@@ -10,7 +10,7 @@
   <ui:composition template="../includes/template/template.xhtml">
     <ui:define name="content">
       <f:event type="preRenderView"
-        listener="#{loginIvyDevWfBean.redirectIfNotAdmin}" />
+        listener="#{loginIvyDevWfBean.redirectIfNotLoggedIn}" />
 
       <div class="card ui-fluid">
         <div class="p-d-flex p-ai-center p-mb-3">
@@ -21,19 +21,19 @@
           <p:growl id="growl" showDetail="true" />
           <p:panelGrid columns="4" layout="flex"
             columnClasses="p-col-6 p-md-2, p-col-6 p-md-4, p-col-6 p-md-2, p-col-6 p-md-4">
-            <h:outputLabel>User Name</h:outputLabel>
-            <h:outputText value="#{profileBean.userName}"></h:outputText>
+            <h:outputLabel for="userName">User Name</h:outputLabel>
+            <h:outputText id="userName" value="#{profileBean.userName}"></h:outputText>
 
-            <h:outputLabel>Full name</h:outputLabel>
-            <h:outputText value="#{profileBean.fullName}"></h:outputText>
+            <h:outputLabel for="fullName">Full name</h:outputLabel>
+            <h:outputText id="fullName" value="#{profileBean.fullName}"></h:outputText>
 
-            <h:outputLabel>Email</h:outputLabel>
-            <h:outputText value="#{profileBean.email}"></h:outputText>
+            <h:outputLabel for="email">Email</h:outputLabel>
+            <h:outputText id="email" value="#{profileBean.email}"></h:outputText>
 
-            <h:outputLabel>Roles</h:outputLabel>
-            <h:outputText value="#{profileBean.roles}"></h:outputText>
+            <h:outputLabel for="roles">Roles</h:outputLabel>
+            <h:outputText id="roles" value="#{profileBean.roles}"></h:outputText>
 
-            <h:outputLabel>Language</h:outputLabel>
+            <h:outputLabel for="contentLanguage" >Language</h:outputLabel>
             <h:panelGroup>
               <p:selectOneMenu id="contentLanguage"
                 value="#{profileBean.contentLanguage}"
@@ -47,7 +47,7 @@
                 value="#{profileBean.contentLanguageSource}"></h:outputText>
             </h:panelGroup>
 
-            <h:outputLabel>Formatting Language</h:outputLabel>
+            <h:outputLabel for="formattingLanguage">Formatting Language</h:outputLabel>
             <h:panelGroup>
               <p:selectOneMenu filter="true" filterMatchMode="contains"
                 id="formattingLanguage"
