--- a/dev-workflow-ui/webContent/view/profile.xhtml
+++ b/dev-workflow-ui/webContent/view/profile.xhtml
@@ -66,7 +66,7 @@
             <h:outputText id="roles" value="#{profileBean.roles}"></h:outputText>
           </p:panelGrid>
           <p:commandButton id="saveBtn" value="Save"
-            icon="si si-recycling-trash-bin-2"
+            icon="si si-floppy-disk"
             style="max-width:200px;margin-top:20px;"
             actionListener="#{profileBean.save}" update="@form" />
         </h:form>
