--- a/dev-workflow-ui/webContent/view/login.xhtml
+++ b/dev-workflow-ui/webContent/view/login.xhtml
@@ -39,7 +39,7 @@
                 <h:outputLink value="${authProvider.link}">
                   <h:outputText value="${authProvider.image}" escape="false" />
                     <span style="position: relative; bottom: 5px;">
-                      Log in with <h:outputText value="${authProvider.name}" />
+                      Log in with <h:outputText value="${authProvider.displayName}" />
                     </span>
                 </h:outputLink>
               </li>
