--- a/dev-workflow-ui/webContent/resources/css/workflow-ui.css
+++ b/dev-workflow-ui/webContent/resources/css/workflow-ui.css
@@ -99,6 +99,17 @@ body .ui-datatable .ui-datatable-data > tr.ui-state-highlight {
 .main-starts-container .ui-panel-content.ui-widget-content {
   padding: 0px;
 }
+.main-starts-container-empty {
+  padding: 2em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+}
+.main-starts-container-empty > i {
+  font-size: 1.5em;
+  margin-right: 5px
+}
 body .custom-accordion.ui-accordion .ui-accordion-header,
 body .custom-accordion.ui-accordion .ui-accordion-content {
   border: 0px;
