--- a/dev-workflow-ui/webContent/resources/components/startsPanelElement.xhtml
+++ b/dev-workflow-ui/webContent/resources/components/startsPanelElement.xhtml
@@ -14,7 +14,7 @@
         <i id="startableIcon" class="#{cc.attrs.start.icon} p-mr-1"></i>
         <span>#{cc.attrs.start.displayName}</span>
       </span>
-      <span>#{cc.attrs.start.description}</span>
+      <span class="start-description">#{cc.attrs.start.description}</span>
     </p:commandLink>
     <p:link id="copyStartLinkBtn" href="#" onclick="copyToClipboard('#{cc.attrs.start.link}')">
       <i class="si si-copy-paste" />
