--- a/dev-workflow-ui/webContent/resources/components/startsPanelElement.xhtml
+++ b/dev-workflow-ui/webContent/resources/components/startsPanelElement.xhtml
@@ -17,7 +17,7 @@
       <span class="start-description">#{cc.attrs.start.description}</span>
     </p:commandLink>
     <p:link id="copyStartLinkBtn" href="#" onclick="copyToClipboard('#{cc.attrs.start.link}')">
-      <i class="si si-copy-paste" />
+      <i class="si si-hyperlink-3" />
     </p:link>
     <p:tooltip for="copyStartLinkBtn" value="Copy to clipboard" position="left" />
 
