--- a/dev-workflow-ui/webContent/includes/components/personalTasksTable.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/personalTasksTable.xhtml
@@ -41,7 +41,7 @@
     </p:column>
 
     <p:column styleClass="table-btn-1" responsivePriority="2">
-      <p:linkButton icon="si si-navigation-menu-horizontal" styleClass="detail-btn ui-button-outlined ui-button-secondary rounded-button"
+      <p:linkButton icon="si si-expand-6" styleClass="detail-btn ui-button-outlined ui-button-secondary rounded-button"
         href="taskDetails.xhtml?task=#{task.id}" />
     </p:column>
   </p:dataTable>
