--- a/dev-workflow-ui/webContent/resources/css/workflow-ui.css
+++ b/dev-workflow-ui/webContent/resources/css/workflow-ui.css
@@ -35,6 +35,9 @@ body .ui-staticmessage {
 .height-100 {
   height: 100%;
 }
+a > i.detail-btn {
+  font-size: 16pt;
+}
 
 /* Tables */
 .table-header-none thead {
