--- a/dev-workflow-ui/webContent/view/caseDetails.xhtml
+++ b/dev-workflow-ui/webContent/view/caseDetails.xhtml
@@ -36,14 +36,16 @@
                     <i class="p-pr-3 si si-information-circle"></i>
                     <h6 class="p-m-0">Case Map</h6>
                   </div>
-                  <div class="straight-text-icon">
+                  <div class="p-d-flex">
                     <h:panelGroup layout="block" rendered="#{not empty casesDetailsIvyDevWfBean.sidesteps}">
                       <p:commandButton value="Sidesteps" icon="si si-arrow-down-1" id="sidestepsBtn" styleClass="p-mr-1"/>
                       <p:menu id="sidestepMenu" overlay="true" trigger="sidestepsBtn" my="right top" at="right bottom"
                         model="#{casesDetailsIvyDevWfBean.sidestepsMenuModel}" styleClass="menu-no-icons" />
                     </h:panelGroup>
-                    <p:commandButton id="openCaseMapUiViewerBtn" icon="si si-expand-6"
-                      styleClass="ui-button-secondary rounded-button" onclick="PF('process-viewer-dlg').show()"/>
+                    <p:link href="#" id="openCaseMapUiViewerBtn" onclick="PF('process-viewer-dlg').show()"
+                      styleClass="p-d-flex p-ai-center">
+                      <i class="si si-information-circle detail-btn" />
+                    </p:link>
                     <p:tooltip for="openCaseMapUiViewerBtn" position="top" value="Open Case Map Viewer" />
                   </div>
                 </div>
@@ -58,8 +60,10 @@
                     <i class="p-pr-3 si si-information-circle"></i>
                     <h6 class="p-m-0">Process Viewer</h6>
                   </div>
-                  <p:commandButton id="openProcessViewerBtn" icon="si si-expand-6"
-                    styleClass="ui-button-secondary rounded-button" onclick="PF('process-viewer-dlg').show()"/>
+                  <p:link href="#" id="openProcessViewerBtn" onclick="PF('process-viewer-dlg').show()"
+                      styleClass="p-d-flex p-ai-center">
+                    <i class="si si-information-circle detail-btn" />
+                  </p:link>
                   <p:tooltip for="openProcessViewerBtn" position="top" value="Open Process Viewer" />
                 </div>
                 <div class="height-100 p-d-flex p-jc-center p-ai-center">
