--- a/dev-workflow-ui/webContent/view/home.xhtml
+++ b/dev-workflow-ui/webContent/view/home.xhtml
@@ -100,8 +100,9 @@
                   <jc:datetime id="expiryTime" datetime="#{task.expiryTimestamp}" />
                 </p:column>
                 <p:column styleClass="table-btn-1">
-                  <p:linkButton icon="si si-expand-6" styleClass="detail-btn ui-button-outlined ui-button-secondary rounded-button"
-                    href="taskDetails.xhtml?task=#{task.id}" />
+                  <p:link href="taskDetails.xhtml?task=#{task.id}" >
+                    <i class="si si-information-circle detail-btn"/>
+                  </p:link>
                 </p:column>
               </p:dataTable>
               <h:panelGrid rendered="#{homepageIvyDevWfBean.tasksSize eq 0}">
