XIVY-8699 Try improve tests and fix flaky download
- Split and reduce the size of form tags on caseDetails page
- Use "shouldHave(text.." instead of "shouldBe(text..."
- Add some more checks if visible etc.

--- a/dev-workflow-ui/webContent/includes/components/caseDetails/documents.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/caseDetails/documents.xhtml
@@ -4,14 +4,16 @@
   xmlns:p="http://primefaces.org/ui" xmlns:pe="http://primefaces.org/ui/extensions">
 
   <ul class="custom-list">
-    <ui:repeat var="document" value="#{casesDetailsIvyDevWfBean.documents}">
-      <li class="document-entry" style="list-style-type: none;">
-        <span class="p-mr-1 si si-#{document.icon}"/>
-        <h:commandLink value="#{document.name}">
-          <p:fileDownload value="#{document.streamedContent}"></p:fileDownload>
-        </h:commandLink>
-      </li>
-    </ui:repeat>
+    <h:form id="documentsDownloadForm">
+      <ui:repeat var="document" value="#{casesDetailsIvyDevWfBean.documents}">
+        <li class="document-entry" style="list-style-type: none;">
+          <span class="p-mr-1 si si-#{document.icon}"/>
+          <h:commandLink value="#{document.name}">
+            <p:fileDownload value="#{document.streamedContent}"></p:fileDownload>
+          </h:commandLink>
+        </li>
+      </ui:repeat>
+    </h:form>
   </ul>
   <c:if test="#{empty casesDetailsIvyDevWfBean.documents}">
     <h:outputText value="No Documents found" />
