XIVY-8727 Hide process viewer if view permission does not allow it

--- a/dev-workflow-ui/webContent/includes/components/taskDetails/description.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/taskDetails/description.xhtml
@@ -65,7 +65,8 @@
     <h:outputText value="Current Element" />
     <p:commandLink id="openProcessViewerBtn" styleClass="p-d-flex p-ai-center"
       actionListener="#{tasksDetailsIvyDevWfBean.setViewerLink()}" oncomplete="PF('process-viewer-dlg').show()"
-      update="processViewer:processViewerDialog">
+      update="processViewer:processViewerDialog"
+      disabled="#{!tasksDetailsIvyDevWfBean.selectedTask.viewerAllowed}">
       <i class="si si-hierarchy-6 si-rotate-270 p-mr-1" />
       #{tasksDetailsIvyDevWfBean.selectedTask.currentElement}
     </p:commandLink>
