--- a/dev-workflow-ui/webContent/resources/components/startsPanelElement.xhtml
+++ b/dev-workflow-ui/webContent/resources/components/startsPanelElement.xhtml
@@ -29,7 +29,7 @@
       value="Open start on a fullscreen page. Add 'embedInFrame' request custom field to set this as default." />
 
     <p:commandLink id="openProcessViewer" oncomplete="PF('process-viewer-dlg').show()" styleClass="p-ml-2 p-mr-2"
-      rendered="#{loginIvyDevWfBean.loggedIn}" update="startsForm:processViewer:processViewerDialog"
+      rendered="#{cc.attrs.start.viewerAllowed}" update="startsForm:processViewer:processViewerDialog"
       actionListener="#{processesIvyDevWfBean.setViewerStart(cc.attrs.start.viewerLink)}">
       <i class="si si-hierarchy-6 si-rotate-270" />
     </p:commandLink>
