--- a/dev-workflow-ui/webContent/view/caseDetails.xhtml
+++ b/dev-workflow-ui/webContent/view/caseDetails.xhtml
@@ -2,7 +2,8 @@
   xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
   xmlns:ic="http://ivyteam.ch/jsf/component" xmlns:p="http://primefaces.org/ui"
   xmlns:pe="http://primefaces.org/ui/extensions" xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
-  xmlns:pm="http://primefaces.org/serenity-ivy" xmlns:jc="http://java.sun.com/jsf/composite/components">
+  xmlns:pm="http://primefaces.org/serenity-ivy" xmlns:jc="http://java.sun.com/jsf/composite/components"
+  xmlns:jsf="http://xmlns.jcp.org/jsf">
 
 <h:body>
   <f:metadata>
@@ -60,14 +61,15 @@
                     <i class="p-pr-3 si si-information-circle"></i>
                     <h6 class="p-m-0">Process Viewer</h6>
                   </div>
-                  <p:link href="#" id="openProcessViewerBtn" onclick="PF('process-viewer-dlg').show()"
+                  <p:link rendered="#{casesDetailsIvyDevWfBean.viewerAllowed}" href="#" id="openProcessViewerBtn" onclick="PF('process-viewer-dlg').show()"
                       styleClass="p-d-flex p-ai-center">
                     <i class="si si-information-circle detail-btn" />
                   </p:link>
-                  <p:tooltip for="openProcessViewerBtn" position="top" value="Open Process Viewer" />
+                  <p:tooltip rendered="#{casesDetailsIvyDevWfBean.viewerAllowed}" for="openProcessViewerBtn" position="top" value="Open Process Viewer" />
                 </div>
                 <div class="height-100 p-d-flex p-jc-center p-ai-center">
-                  <iframe id="processViewerFrame" class="process-viewer-preview" src="#{casesDetailsIvyDevWfBean.processPreviewLink}"/>
+                  <div jsf:rendered="#{!casesDetailsIvyDevWfBean.viewerAllowed}">Current Process is hidden</div>
+                  <iframe jsf:rendered="#{casesDetailsIvyDevWfBean.viewerAllowed}" id="processViewerFrame" class="process-viewer-preview" src="#{casesDetailsIvyDevWfBean.processPreviewLink}"/>
                 </div>
               </div>
             </h:panelGroup>
