--- a/dev-workflow-ui/webContent/view/profile.xhtml
+++ b/dev-workflow-ui/webContent/view/profile.xhtml
@@ -19,17 +19,17 @@
         </div>
         <h:form id="profileForm">
           <p:growl id="growl" showDetail="true" />
-          <p:panelGrid columns="2" layout="flex" columnClasses="p-col-3,p-col-9">
-            <h:outputLabel for="userName">User Name</h:outputLabel>
+          <p:panelGrid columns="2" layout="flex" columnClasses="p-col-12 p-md-3, p-col-12 p-md-9">
+            <h:outputLabel for="userName" styleClass="details-description-label">User Name</h:outputLabel>
             <h:outputText id="userName" value="#{profileBean.userName}"></h:outputText>
 
-            <h:outputLabel for="fullName">Full name</h:outputLabel>
+            <h:outputLabel for="fullName" styleClass="details-description-label">Full name</h:outputLabel>
             <p:inputText id="fullName" value="#{profileBean.fullName}"></p:inputText>
 
-            <h:outputLabel for="email">Email</h:outputLabel>
+            <h:outputLabel for="email" styleClass="details-description-label">Email</h:outputLabel>
             <p:inputText id="email" value="#{profileBean.email}"></p:inputText>
 
-            <h:outputLabel for="contentLanguage" >Language</h:outputLabel>
+            <h:outputLabel for="contentLanguage" styleClass="details-description-label">Language</h:outputLabel>
             <h:panelGroup>
               <p:selectOneMenu id="contentLanguage"
                 value="#{profileBean.contentLanguage}"
@@ -45,7 +45,7 @@
                </small>
             </h:panelGroup>
 
-            <h:outputLabel for="formattingLanguage">Formatting Language</h:outputLabel>
+            <h:outputLabel for="formattingLanguage" styleClass="details-description-label">Formatting Language</h:outputLabel>
             <h:panelGroup>
               <p:selectOneMenu filter="true" filterMatchMode="contains"
                 id="formattingLanguage"
@@ -62,7 +62,7 @@
               </small>
             </h:panelGroup>
 
-            <h:outputLabel for="roles">Roles</h:outputLabel>
+            <h:outputLabel for="roles" styleClass="details-description-label">Roles</h:outputLabel>
             <h:outputText id="roles" value="#{profileBean.roles}"></h:outputText>
           </p:panelGrid>
           <p:commandButton id="saveBtn" value="Save"
