XIVY-9722 Refresh iframe only refreshes the dialog and not the process
- Replace the browser history with the current dialog url, so a refresh
loads the dialog url in the iframe instead of restart the process

--- a/dev-workflow-ui/webContent/view/frame.xhtml
+++ b/dev-workflow-ui/webContent/view/frame.xhtml
@@ -44,8 +44,16 @@
             if (newHref !== lastDispatched) {
               callback(newHref, iframe);
               lastDispatched = newHref;
+              updateHistory(newHref);
             }
           };
+
+          var updateHistory = function(newHref) {
+            var newHrefUrl = new URL(newHref);
+            var historyUrl = new URL(window.location);
+            historyUrl.searchParams.set('taskUrl', newHrefUrl.pathname + newHrefUrl.search);
+            history.replaceState({}, "", historyUrl);
+          }
 
           var unloadHandler = function() {
             // Timeout needed because the URL changes immediately after
