--- a/dev-workflow-ui/webContent/resources/css/workflow-ui.css
+++ b/dev-workflow-ui/webContent/resources/css/workflow-ui.css
@@ -56,7 +56,7 @@ a > i.detail-btn {
 .ui-datatable .ui-column-filter {
   display: none;
 }
-.straight-text-icon {
+.overflow-hidden-ellipsis {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -101,12 +101,18 @@ body .ui-datatable .ui-datatable-data > tr.ui-state-highlight {
 .start-element .start-link {
   width: 100%;
   padding: 0.5rem;
+  overflow: hidden;
 }
 .start-element:hover {
   background-color: var(--primary-lighter-color);
 }
+.si.startable-icon {
+  font-size: 1.25em;
+  padding: 4px;
+}
 .start-description {
   color: var(--text-color-secondary);
+  opacity: 0.75;
 }
 .main-starts-container .ui-panel-content.ui-widget-content {
   padding: 0px;
