--- a/dev-workflow-ui/webContent/resources/components/caseLink.xhtml
+++ b/dev-workflow-ui/webContent/resources/components/caseLink.xhtml
@@ -7,10 +7,10 @@
 </cc:interface>
 
 <cc:implementation>
-  <h:link styleClass="case-link" outcome="caseDetails">
+  <h:link styleClass="case-link p-d-flex p-ai-center" outcome="caseDetails">
     <f:param name="case" value="#{cc.attrs.case.id}"/>
-    <i class="si si-task-list-approve case-link-icon p-mr-1" />
-    <h:outputText id="caseState" styleClass="si si-#{casesIvyDevWfBean.getStateIcon(cc.attrs.case.getState())} case-link-icon p-mr-1"/>
+    <i class="si si-task-list-approve p-mr-1" />
+    <h:outputText id="caseState" styleClass="si si-#{casesIvyDevWfBean.getStateIcon(cc.attrs.case.getState())} p-mr-1"/>
     <p:tooltip for="caseState" value="State: #{cc.attrs.case.state}" position="top"/>
     <h:outputText id="caseLink" value="#{casesIvyDevWfBean.getName(cc.attrs.case)}" />
     <p:tooltip for="caseLink" value="ID: #{cc.attrs.case.id}" position="top"/>
