--- a/dev-workflow-ui/webContent/resources/components/taskLink.xhtml
+++ b/dev-workflow-ui/webContent/resources/components/taskLink.xhtml
@@ -1,18 +1,17 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:f="http://xmlns.jcp.org/jsf/core"
   xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
   xmlns:cc="http://xmlns.jcp.org/jsf/composite" xmlns:ic="http://ivyteam.ch/jsf/component"
-  xmlns:p="http://primefaces.org/ui" xmlns:pe="http://primefaces.org/ui/extensions"
-  xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
+  xmlns:p="http://primefaces.org/ui" xmlns:pe="http://primefaces.org/ui/extensions">
 <cc:interface>
   <cc:attribute name="task" />
 </cc:interface>
 
 <cc:implementation>
   <ui:param name="task" value="#{tasksIvyDevWfBean.toTaskLinkModel(cc.attrs.task)}"/>
-  <h:link styleClass="case-link" outcome="taskDetails">
+  <h:link outcome="taskDetails" styleClass="p-d-flex p-ai-center">
     <f:param name="task" value="#{task.id}"/>
-    <i class="si si-task-list-edit case-link-icon p-mr-1" />
-    <h:outputText id="taskState" styleClass="si si-#{task.stateIcon} case-link-icon p-mr-1" />
+    <i class="si si-task-list-edit p-mr-1" />
+    <h:outputText id="taskState" styleClass="si si-#{task.stateIcon} p-mr-1" />
     <p:tooltip for="taskState" value="State: #{task.state}" position="top"/>
     <h:outputText id="taskLink" value="#{task.name}" />
     <p:tooltip for="taskLink" value="ID: #{task.id}" position="top"/>
